Test_direct/newest_eta1/slurm-61704.out
bash: cannot set terminal process group (87417): Inappropriate ioctl for device
bash: no job control in this shell
Removing compiler version 2023.1.0
Use `module list` to view any remaining dependent modules.
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Removing mkl version 2023.1.0
Use `module list` to view any remaining dependent modules.

     _        _        _        _
   _( )__   _( )__   _( )__   _( )__
 _|     _|_|     _|_|     _|_|     _|
(_ Q _ (_(_ P _ (_(_ S _ (_(_ H _ (_
  |_( )__| |_( )__| |_( )__| |_( )__|



   -- Quantum  Package  Shell --

Loading compiler version 2023.1.0
  Load "debugger" to debug DPC++ applications with the gdb-oneapi debugger.
  Load "dpl" for additional DPC++ APIs: https://github.com/oneapi-src/oneDPL
Loading mkl version 2023.1.0
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
cp: cannot stat 'Optimal_LB': No such file or directory
cp: cannot stat 'Optimal_EI': No such file or directory
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
OMP: Info #269: OMP_NESTED variable deprecated, please use OMP_MAX_ACTIVE_LEVELS instead.
cp: overwrite 'N2_minus.hf.4states.no.cipsi.17200.scan.script..LB.out'? awk: cmd. line:1: BEGIN {print 0.0000000000 - }
awk: cmd. line:1:                             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
  File "/beegfs/jalberola/PHD/test_interface_2025/Spline-optimal-eta/TEST_17200/PYTHON_script/Eta_Gaussian_Regresion/Test_direct/newest_eta1/PROGRAM_bayesian_optimization_direct_test.py", line 447
    kappa = 1.0.0
               ^^
SyntaxError: invalid syntax
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: cmd. line:1: BEGIN {print  - }
awk: cmd. line:1:                 ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:             ^ syntax error
awk: cmd. line:1: BEGIN {if ( < 0) print 1; else print 0}
awk: cmd. line:1:                           ^ syntax error
bash: [: -eq: unary operator expected
Difference in velocity:
Difference in eta:
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:              ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                          ^ syntax error
awk: cmd. line:1: BEGIN {if (( < 0.000001) && ( < 0.000001)) print 1; else print 0}
awk: cmd. line:1:                                            ^ syntax error
bash: [: -eq: unary operator expected
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
awk: fatal: cannot open file `Optimal_LB' for reading (No such file or directory)
Syntax Error
slurmstepd-cnzen2-2: error: *** JOB 61704 ON cnzen2-2 CANCELLED AT 2025-03-14T10:23:07 ***
